# wgmine

./: .gitignore  Dockerfile  LICENSE  README.md
py/: requirements.txt  wgmine.py
src/: CMakeLists.txt  main.c
